@@ -83,14 +83,14 @@ $(function () {
          text: ''
       },
       lang: {
-            printButtonTitle: <?php echo "'".__('PRINT_HIGHCHART')."',"; ?>
-            exportButtonTitle: <?php echo "'".__('EXPORT_HIGHCHART')."',"; ?>
-            downloadPNG : <?php echo "'".__('EXPORT_PNG')."',"; ?>
-            downloadJPEG : <?php echo "'".__('EXPORT_JPEG')."',"; ?>
-            downloadPDF : <?php echo "'".__('EXPORT_PDF')."',"; ?>
-            downloadSVG : <?php echo "'".__('EXPORT_SVG')."',"; ?>
-            resetZoom : <?php echo "'".__('RESET_ZOOM')."',"; ?>
-            resetZoomTitle : <?php echo "'".__('RESET_ZOOM_TITLE')."'"; ?>
+            printButtonTitle: <?php echo "'".__('PRINT_HIGHCHART','highchart')."',"; ?>
+            exportButtonTitle: <?php echo "'".__('EXPORT_HIGHCHART','highchart')."',"; ?>
+            downloadPNG : <?php echo "'".__('EXPORT_PNG','highchart')."',"; ?>
+            downloadJPEG : <?php echo "'".__('EXPORT_JPEG','highchart')."',"; ?>
+            downloadPDF : <?php echo "'".__('EXPORT_PDF','highchart')."',"; ?>
+            downloadSVG : <?php echo "'".__('EXPORT_SVG','highchart')."',"; ?>
+            resetZoom : <?php echo "'".__('RESET_ZOOM','highchart')."',"; ?>
+            resetZoomTitle : <?php echo "'".__('RESET_ZOOM_TITLE','highchart')."'"; ?>
       },
       xAxis: {
          categories: [
