@@ -195,8 +195,8 @@ buttonImageOnly: 'true',
 
 Highcharts.setOptions({
 lang: {
-<?php echo "resetZoom : '".__('RESET_ZOOM')."',"; ?>
-<?php echo "resetZoomTitle : '".__('RESET_ZOOM_TITLE')."'"; ?>
+<?php echo "resetZoom : '".__('RESET_ZOOM','highchart')."',"; ?>
+<?php echo "resetZoomTitle : '".__('RESET_ZOOM_TITLE','highchart')."'"; ?>
 }
 });
 
@@ -207,6 +207,8 @@ $(function () {
          chart: {
             backgroundColor: '#F7F7F9',
             borderWidth: 3,
+            borderColor: '#959891',
+            borderRadius: 20,
             renderTo: 'container',
             zoomType: 'x',
             alignTicks: false,
@@ -219,22 +221,22 @@ $(function () {
             }
          },
          title: {
-             text: <?php echo "'<b>".__('HISTO_GRAPH')." (".$legend_date.")*</b>'"; ?>,
+             text: <?php echo "'<b>".__('HISTO_GRAPH','highchart')." (".$legend_date.")*</b>'"; ?>,
          },
          subtitle: {
              text: document.ontouchstart === undefined ?
-               <?php echo "'".__('DRAG_PLOT')."'"; ?>:
-               <?php echo "'".__('DRAG_PLOT')."'"; ?>
+               <?php echo "'".__('DRAG_PLOT','highchart')."'"; ?>:
+               <?php echo "'".__('DRAG_PLOT','highchart')."'"; ?>
          },
          lang: {
-            printButtonTitle: <?php echo "'".__('PRINT_HIGHCHART')."',"; ?>
-            exportButtonTitle: <?php echo "'".__('EXPORT_HIGHCHART')."',"; ?>
-            downloadPNG : <?php echo "'".__('EXPORT_PNG')."',"; ?>
-            downloadJPEG : <?php echo "'".__('EXPORT_JPEG')."',"; ?>
-            downloadPDF : <?php echo "'".__('EXPORT_PDF')."',"; ?>
-            downloadSVG : <?php echo "'".__('EXPORT_SVG')."',"; ?>
-            resetZoom : <?php echo "'".__('RESET_ZOOM')."',"; ?>
-            resetZoomTitle : <?php echo "'".__('RESET_ZOOM_TITLE')."'"; ?>
+            printButtonTitle: <?php echo "'".__('PRINT_HIGHCHART','highchart')."',"; ?>
+            exportButtonTitle: <?php echo "'".__('EXPORT_HIGHCHART','highchart')."',"; ?>
+            downloadPNG : <?php echo "'".__('EXPORT_PNG','highchart')."',"; ?>
+            downloadJPEG : <?php echo "'".__('EXPORT_JPEG','highchart')."',"; ?>
+            downloadPDF : <?php echo "'".__('EXPORT_PDF','highchart')."',"; ?>
+            downloadSVG : <?php echo "'".__('EXPORT_SVG','highchart')."',"; ?>
+            resetZoom : <?php echo "'".__('RESET_ZOOM','highchart')."',"; ?>
+            resetZoomTitle : <?php echo "'".__('RESET_ZOOM_TITLE','highchart')."'"; ?>
          },
          xAxis: {
             type: 'datetime',
@@ -242,7 +244,7 @@ $(function () {
             showFirstLabel: true,
             <?php if("$type"=="month") { echo "tickInterval: 5 * 24 * 3600 * 1000,"; } ?>
             title: {
-               text: <?php echo "'".__("$xlegend")."'"; ?>
+               text: <?php echo "'".__("$xlegend",'highchart')."'"; ?>
             }
          },
          yAxis: [
@@ -257,7 +259,6 @@ $(function () {
                max: 100,
                startOnTick: false,
                endOnTick: false,
-               alternateGridColor: '#FDFFD5',
                labels: {
                   formatter: function() {
                      if(this.value<=100) return this.value;
@@ -299,25 +300,25 @@ $(function () {
             formatter: function() {
                var tab=new Array;
                <?php if("$type"=="month") { ?>
-                  var val="<p align='left'><b><?php echo __('XAXIS_LEGEND_DAY'); ?>:  </b>"+Highcharts.dateFormat('%H:%M:%S %Y/%m/%d', this.x)+"</p>";
+                  var val="<p align='left'><b><?php echo __('XAXIS_LEGEND_DAY','highchart'); ?>:  </b>"+Highcharts.dateFormat('%H:%M:%S %Y/%m/%d', this.x)+"</p>";
                <?php } else { ?>
-                  var val="<p align='left'><b><?php echo __('XAXIS_LEGEND_DAY'); ?>:  </b>"+Highcharts.dateFormat('%H:%M:%S', this.x)+"</p>"; 
+                  var val="<p align='left'><b><?php echo __('XAXIS_LEGEND_DAY','highchart'); ?>:  </b>"+Highcharts.dateFormat('%H:%M:%S', this.x)+"</p>"; 
                <?php } ?>
                   var unit = {
                      <?php for($i=1;$i<=$GLOBALS['NB_MAX_SENSOR'];$i++) { 
-                     echo "'".__('LEGEND_HUMI','highchart')." (".__('SENSOR')." ".$i.")': '%',";
-                     echo "'".__('LEGEND_TEMP','highchart')." (".__('SENSOR')." ".$i.")': '°C',";
+                     echo "'".__('LEGEND_HUMI','highchart')." (".__('SENSOR','highchart')." ".$i.")': '%',";
+                     echo "'".__('LEGEND_TEMP','highchart')." (".__('SENSOR','highchart')." ".$i.")': '°C',";
                } ?>
-               <?php echo "'".__('LEGEND_POWER')."'"; ?>: 'W'
+               <?php echo "'".__('LEGEND_POWER','highchart')."'"; ?>: 'W'
                <?php if((isset($select_plug))&&(!empty($select_plug))) {
                      echo ",'".clean_popup_message($plugs_infos[$select_plug-1]["PLUG_NAME"])."': ''"; 
                } ?>
             }[this.series.name];
             if(unit=='') { 
                if(this.y==100) {
-                     behaviour='<?php echo __("VALUE_ON"); ?>';
+                     behaviour='<?php echo __("VALUE_ON","highchart"); ?>';
                } else if(this.y==0){
-                     behaviour='<?php echo __("VALUE_OFF"); ?>';
+                     behaviour='<?php echo __("VALUE_OFF","highchart"); ?>';
                } else {
                      behaviour=(this.y)*100/100;
                      behaviour=behaviour.toFixed(1);
@@ -428,7 +429,7 @@ $(function () {
               {
               type: 'area',
                showCheckbox: true,
-               name: <?php echo "'".__('LEGEND_HUMI','highchart')." (".__('SENSOR')." ".$nb.")'"; ?>,
+               name: <?php echo "'".__('LEGEND_HUMI','highchart')." (".__('SENSOR','highchart')." ".$nb.")'"; ?>,
                pointInterval:  <?php echo "$next"; ?> * 60 * 1000,
                pointStart: Date.UTC(<?php echo $styear.",".$stmonth.",".$stday; ?>),
                <?php switch($color_humidity) {
@@ -460,7 +461,7 @@ $(function () {
             }, {
                type: 'area',
                showCheckbox: true,
-               name: <?php echo "'".__('LEGEND_TEMP','highchart')." (".__('SENSOR')." ".$nb.")'"; ?>,
+               name: <?php echo "'".__('LEGEND_TEMP','highchart')." (".__('SENSOR','highchart')." ".$nb.")'"; ?>,
                pointInterval: <?php echo "$next"; ?> * 60 * 1000,
                pointStart: Date.UTC(<?php echo $styear.",".$stmonth.",".$stday; ?>),
                    <?php switch($color_temperature) {
@@ -499,7 +500,7 @@ $(function () {
                   showCheckbox: true,
                   pointInterval:  <?php echo "$next"; ?> * 60 * 1000,
                   pointStart: Date.UTC(<?php echo $styear.",".$stmonth.",".$stday; ?>),
-                  name: <?php echo "'".__('LEGEND_POWER')."'"; ?>,
+                  name: <?php echo "'".__('LEGEND_POWER','highchart')."'"; ?>,
                   yAxis: 2,
                   color: <?php echo "'".$color_power."'"; ?>,
                   selected: true,
@@ -550,7 +551,7 @@ $(function () {
                {
                type: 'area',
                showCheckbox: true,
-               name: <?php echo "'".__('LEGEND_HUMI','highchart')." (".__('SENSOR')." ".$select_sensor.")'"; ?>,
+               name: <?php echo "'".__('LEGEND_HUMI','highchart')." (".__('SENSOR','highchart')." ".$select_sensor.")'"; ?>,
                pointInterval:  <?php echo "$next"; ?> * 60 * 1000,
                pointStart: Date.UTC(<?php echo $styear.",".$stmonth.",".$stday; ?>),
                color: <?php echo "'".$color_humidity."'"; ?>,
@@ -571,7 +572,7 @@ $(function () {
             }, {
                type: 'area',
                showCheckbox: true,
-               name: <?php echo "'".__('LEGEND_TEMP','highchart')." (".__('SENSOR')." ".$select_sensor.")'"; ?>,
+               name: <?php echo "'".__('LEGEND_TEMP','highchart')." (".__('SENSOR','highchart')." ".$select_sensor.")'"; ?>,
                pointInterval: <?php echo "$next"; ?> * 60 * 1000,
                pointStart: Date.UTC(<?php echo $styear.",".$stmonth.",".$stday; ?>),
                color: <?php echo "'".$color_temperature."'"; ?>,
@@ -597,7 +598,7 @@ $(function () {
                   showCheckbox: true,
                   pointInterval:  <?php echo "$next"; ?> * 60 * 1000,
                   pointStart: Date.UTC(<?php echo $styear.",".$stmonth.",".$stday; ?>),
-                  name: <?php echo "'".__('LEGEND_POWER')."'"; ?>,
+                  name: <?php echo "'".__('LEGEND_POWER','highchart')."'"; ?>,
                   yAxis: 2,
                   color: <?php echo "'".$color_power."'"; ?>,
                   selected: true,
@@ -791,7 +792,7 @@ $(function () {
 <tr>
     <td class="log-manage-marge"></td>
     <td class="log-manage-title"><?php echo __('IMPORT_LOG_TITLE')." ".$log_search." ".__('IMPORT_LAST_MONTH'); ?><img src="main/libs/img/infos.png" alt="" class="info-bulle-css" title="<?php echo __('TOOLTIP_LOAD_LOG'); ?>" /></td>
-    <td class="log-manage-field"><input type="submit" id="import_log" name="import_log" value="<?php echo __('IMPORT_LOG'); ?>" <?php if((!isset($sd_card))||(empty($sd_card))) echo "disabled"; ?>
+    <td class="log-manage-field"><input type="submit" id="import_log" name="import_log" <?php if((!isset($sd_card))||(empty($sd_card))) { echo "disabled"; ?> value="<?php echo __('NO_IMPORT_LOG'); ?>" <?php } else { ?>value="<?php echo __('IMPORT_LOG'); ?>" <?php } ?>
 ></td>
     <td></td>
 </tr>
