@@ -19,6 +19,9 @@ CultiBox (1.1.9) precise; urgency=low
     + AJout d'encres pour afficher la page après soumission au bon endroit
     + Passage de joomla 2.5.3 a 2.5.9
     + Ajout de faux logs basés sur les données de philou le filou
+    + Correction des accents dans les graphes highcharts des logs et du cost
+    + Suppression des alternatecolor dans highchart pour ne pas effacer le message de fake log
+    
 
 -- Yann Genevois <yann.genevois@gmail.com> Fri Mar  8 11:27:13 CET 2013
 
